Added solutions with n=10

--- a/DiracSeesaw_Tree_level-II.ipynb
+++ b/DiracSeesaw_Tree_level-II.ipynb
@@ -2407,6 +2407,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-1.00135803e-05,  1.00000000e+09]),\n",
+       " array([[-1.e+00, -1.e-07],\n",
+       "        [ 1.e-07, -1.e+00]]))"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.eig(M)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
