--- a/DiracSeesaw_Tree_level.ipynb
+++ b/DiracSeesaw_Tree_level.ipynb
@@ -3733,6 +3733,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matrix rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy as sp\n",
+    "import numpy as np\n",
+    "#For arbitrary precision see:\n",
+    "#https://stackoverflow.com/questions/6876377/numpy-arbitrary-precision-linear-algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=3\n",
+    "Z=np.zeros((n,n))\n",
+    "MD=np.random.uniform(100,200,(n,n))\n",
+    "MS=np.random.uniform(100,200,(n,n))\n",
+    "MF=np.zeros((n,n))\n",
+    "if n>=1:\n",
+    "    MF[0,0]=1E5\n",
+    "if n>=2:\n",
+    "    MF[1,1]=1E6\n",
+    "if n>=3:\n",
+    "    MF[2,2]=1E7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.000e+00, 0.000e+00, 0.000e+00, 1.190e+02, 1.451e+02, 1.713e+02],\n",
+       "       [0.000e+00, 0.000e+00, 0.000e+00, 1.765e+02, 1.672e+02, 1.971e+02],\n",
+       "       [0.000e+00, 0.000e+00, 0.000e+00, 1.212e+02, 1.731e+02, 1.069e+02],\n",
+       "       [1.190e+02, 1.765e+02, 1.212e+02, 1.000e+05, 0.000e+00, 0.000e+00],\n",
+       "       [1.451e+02, 1.672e+02, 1.731e+02, 0.000e+00, 1.000e+06, 0.000e+00],\n",
+       "       [1.713e+02, 1.971e+02, 1.069e+02, 0.000e+00, 0.000e+00, 1.000e+07]])"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#M=np.vstack( (np.hstack((Z,MD)),np.hstack((MS,MF))) )\n",
+    "M=np.vstack( (np.hstack((Z,MD)),np.hstack((MD.transpose(),MF))) )\n",
+    "#M=np.longdouble(M)\n",
+    "M.round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 1.00000000e+07,  1.00000008e+06,  1.00000600e+05, -6.84566071e-01,\n",
+       "        -2.05499047e-04, -2.21535385e-03]),\n",
+       " array([[-1.71323618e-05,  1.45116970e-04,  1.19000618e-03,\n",
+       "          4.91528111e-01, -8.53694022e-01, -1.72061603e-01],\n",
+       "        [-1.97102067e-05,  1.67176101e-04,  1.76485215e-03,\n",
+       "          7.07176539e-01,  2.75971864e-01,  6.50951403e-01],\n",
+       "        [-1.06860046e-05,  1.73108360e-04,  1.21227918e-03,\n",
+       "          5.08227687e-01,  4.41640179e-01, -7.39362612e-01],\n",
+       "        [-6.88164605e-10,  7.52881718e-08,  9.99997000e-01,\n",
+       "         -2.44910493e-03, -6.53958422e-06, -4.77648227e-05],\n",
+       "        [-8.47900910e-10,  9.99999961e-01, -7.52874828e-07,\n",
+       "         -2.77530375e-04,  1.29798262e-06,  4.41353959e-05],\n",
+       "        [-1.00000000e+00, -8.47900964e-09, -6.88158001e-08,\n",
+       "         -2.77905547e-05,  4.46696340e-06, -1.98173282e-06]]))"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sp.linalg.eig(M)\n",
+    "np.linalg.eig(M)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
