--- a/newsolutions.ipynb
+++ b/newsolutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,61 +288,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3486784401"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(s.ls)*len(s.ks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
-     "evalue": "Ignore this cell",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m Ignore this cell\n"
-     ]
-    },
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:3426: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Ready n\n",
+      "10 → (116732, 5)\n",
+      "10 → (116732, 5)\n",
+      "Ready n\n",
+      "9 → (24728, 5)\n",
+      "9 → (24882, 5)\n",
+      "Ready n\n",
+      "8 → (5566, 5)\n",
+      "8 → (5569, 5)\n",
+      "Ready n\n",
+      "7 → (755, 5)\n",
+      "7 → (761, 5)\n",
+      "Ready n\n",
+      "6 → (141, 5)\n",
+      "6 → (141, 5)\n"
      ]
     }
    ],
    "source": [
     "if not REBUILD:\n",
     "    sys.exit('Ignore this cell')\n",
-    "dfn=pd.read_json('s9.json')\n",
+    "dfn=pd.DataFrame()\n",
     "\n",
-    "dfn['n']=dfn['z'].apply(lambda l: 8 if l.count(0)==1 else 9)\n",
+    "#assert dfn.shape[0]==dfn['z'].astype(str).unique().shape[0]\n",
     "\n",
-    "if dfn[dfn['z'].apply(lambda l: l.count(0))>1].empty:\n",
-    "    print('Ready n')\n",
-    "    kk=dfn['z'].apply(lambda l: l.remove(0) if l.count(0)==1 else l )\n",
-    "\n",
-    "assert dfn.shape[0]==dfn['z'].astype(str).unique().shape[0]\n",
-    "\n",
-    "for n in [8,7,6]:\n",
+    "for n in [10,9,8,7,6]:\n",
     "    pdfn={}\n",
     "    pdfn[n]=pd.read_json('s{}.json'.format(n))\n",
     "\n",
@@ -368,17 +355,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
-     "evalue": "Ignore this cell",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m Ignore this cell\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>l</th>\n",
+       "      <th>k</th>\n",
+       "      <th>z</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>n</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [l, k, z, gcd, n]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -389,24 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "Ignore this cell",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m Ignore this cell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not REBUILD:\n",
     "    sys.exit('Ignore this cell')\n",
     "rng={}\n",
-    "for n in [6,7,8,9]:\n",
+    "for n in [6,7,8,9,10]:\n",
     "    rng[n]=[(dfn[dfn['n']==n].l.apply(lambda l: max(l)).max(),dfn[dfn['n']==n].l.apply(lambda l: min(l)).min()),\n",
     " (dfn[dfn['n']==n].k.apply(lambda l: max(l)).max(),dfn[dfn['n']==n].k.apply(lambda l: min(l)).min())]"
    ]
@@ -425,17 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
-     "evalue": "Ignore this cell",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m Ignore this cell\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{6: [(6, -6), (10, -10)],\n",
+       " 7: [(15, -12), (15, -15)],\n",
+       " 8: [(15, -15), (15, -15)],\n",
+       " 9: [(9, -9), (9, -9)],\n",
+       " 10: [(6, -6), (6, -6)]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -446,19 +462,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "Ignore this cell",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m Ignore this cell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not REBUILD:\n",
     "    sys.exit('Ignore this cell')\n",
@@ -468,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,16 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(31211, 5)"
+       "(148097, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +563,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>503</th>\n",
+       "      <th>935</th>\n",
        "      <td>[1, 0]</td>\n",
        "      <td>[-1, -5, 0]</td>\n",
        "      <td>[2, -3, -10, 13, 13, -15]</td>\n",
@@ -570,10 +576,10 @@
       ],
       "text/plain": [
        "          l            k                   solution  gcd  n\n",
-       "503  [1, 0]  [-1, -5, 0]  [2, -3, -10, 13, 13, -15]    2  6"
+       "935  [1, 0]  [-1, -5, 0]  [2, -3, -10, 13, 13, -15]    2  6"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,16 +590,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(31211, 6)"
+       "(148097, 6)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +611,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31365, 6)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds9=ds[ds['n']<10].reset_index(drop=True)\n",
+    "ds9['strz']=ds9['solution'].astype(str)\n",
+    "ds9.drop_duplicates('strz').shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,16 +642,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16805"
+       "95358"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,8 +671,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WARNING: Working only with n<10"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds=ds[ds['n']<10].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
