--- a/DiracSeesaw_Tree_level.ipynb
+++ b/DiracSeesaw_Tree_level.ipynb
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 928,
+   "execution_count": 1022,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 929,
+   "execution_count": 1023,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 930,
+   "execution_count": 1024,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 931,
+   "execution_count": 1025,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        "23     9      10     2   2   2   3   0       1  "
       ]
      },
-     "execution_count": 931,
+     "execution_count": 1025,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 932,
+   "execution_count": 1031,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>l</th>\n",
+       "      <th>k</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>gcd</th>\n",
+       "      <th>n</th>\n",
+       "      <th>sltn</th>\n",
+       "      <th>tree_level</th>\n",
+       "      <th>smax</th>\n",
+       "      <th>D_msls</th>\n",
+       "      <th>rptd</th>\n",
+       "      <th>nl</th>\n",
+       "      <th>nν</th>\n",
+       "      <th>nr</th>\n",
+       "      <th>rk</th>\n",
+       "      <th>M_msls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>[-2, -1, 0]</td>\n",
+       "      <td>[-1, -3, -5, -3]</td>\n",
+       "      <td>[5, 6, 6, 6, -8, -9, -9, -10, 13]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>[5, 6, 6, 6, -8, -9, -9, -10, 13]</td>\n",
+       "      <td>[{'[l,ν,s,m_in,m_out]': [-9, 6, 3, 0, -12], 'massless': [12], 'sp': 24, 'sp_massless': [], 'rank': 0}, {'[l,ν,s,m_in,m_out]': [6, -9, 3, 0, 3], 'massless': [], 'sp': None, 'sp_massless': None}]</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               l                 k                           solution  gcd  n  \\\n",
+       "301  [-2, -1, 0]  [-1, -3, -5, -3]  [5, 6, 6, 6, -8, -9, -9, -10, 13]    2  9   \n",
+       "\n",
+       "                                  sltn  \\\n",
+       "301  [5, 6, 6, 6, -8, -9, -9, -10, 13]   \n",
+       "\n",
+       "                                                                                                                                                                                            tree_level  \\\n",
+       "301  [{'[l,ν,s,m_in,m_out]': [-9, 6, 3, 0, -12], 'massless': [12], 'sp': 24, 'sp_massless': [], 'rank': 0}, {'[l,ν,s,m_in,m_out]': [6, -9, 3, 0, 3], 'massless': [], 'sp': None, 'sp_massless': None}]   \n",
+       "\n",
+       "     smax  D_msls  rptd  nl  nν  nr  rk  M_msls  \n",
+       "301    13       0     2   2   3   3   0       1  "
+      ]
+     },
+     "execution_count": 1031,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fl[fl['solution'].astype(str)=='[5, 6, 6, 6, -8, -9, -9, -10, 13]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1029,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1375,7 @@
        "277    11       0     3   2   3   3   1       1  "
       ]
      },
-     "execution_count": 932,
+     "execution_count": 1029,
      "metadata": {},
      "output_type": "execute_result"
     }
