--- a/newsolutions.ipynb
+++ b/newsolutions.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,16 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(s.ls)*len(s.ks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +296,11 @@
      "output_type": "stream",
      "text": [
       "Ready n\n",
+      "11 → (162109, 5)\n",
+      "11 → (162109, 5)\n",
+      "Ready n\n",
       "10 → (116732, 5)\n",
-      "10 → (116732, 5)\n",
+      "10 → (116864, 5)\n",
       "Ready n\n",
       "9 → (24728, 5)\n",
       "9 → (24882, 5)\n",
@@ -329,7 +323,7 @@
     "\n",
     "#assert dfn.shape[0]==dfn['z'].astype(str).unique().shape[0]\n",
     "\n",
-    "for n in [10,9,8,7,6]:\n",
+    "for n in [11,10,9,8,7,6]:\n",
     "    pdfn={}\n",
     "    pdfn[n]=pd.read_json('s{}.json'.format(n))\n",
     "\n",
@@ -355,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +391,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +443,7 @@
        " 10: [(6, -6), (6, -6)]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,16 +504,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(148097, 5)"
+       "(310338, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
