--- a/Type_II_Dark_Dirac_Seesaw.ipynb
+++ b/Type_II_Dark_Dirac_Seesaw.ipynb
@@ -6,13 +6,13 @@
     "id": "tlDEHLH6KCEM"
    },
    "source": [
-    "# Chiral solutions for Type-II Dirac seesaw with a Dark Symmetry\n",
+    "# Chiral solutions for Type-II Dirac seesaw with a Active Symmetry\n",
     "![img](./schema.svg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "GYaKHGh7KCEP"
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -58,7 +58,7 @@
        "(390074, 5)"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -94,7 +94,7 @@
        "(48290, 5)"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "Name: solution, Length: 21467, dtype: object"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -252,7 +252,7 @@
        "21466  [14, -18, -24, -24, -24, 27, 27, 28, 29, 29, -32, -32]    2  12    32  "
       ]
      },
-     "execution_count": 241,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 9,
    "metadata": {
     "id": "NYJZBQ52KCEU"
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "[327 rows x 7 columns]"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "[6, 10, 14]"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "3730                     {'χ': (-7, -7), 'ψ': (-16, 2)}  "
       ]
      },
-     "execution_count": 278,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,6 +853,13 @@
    "source": [
     "dsp[dsp['DMs'].apply(lambda d: 'ψ' in d.keys() and 'χ' in d.keys())]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
