--- a/Type_II_Dark_Dirac_Seesaw.ipynb
+++ b/Type_II_Dark_Dirac_Seesaw.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Chiral solutions for Type-II Dirac seesaw with a Active Symmetry\n",
-    "![img](./schema.svg)"
+    "![img](https://raw.githubusercontent.com/restrepo/anomaly/main/schema.svg)"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "source": [
     "## 1. Check phenomenological conditions\n",
     "<div style=\"float: right;\" markdown=\"1\">\n",
-    "    <img src=\"./TII-seesaw.svg\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/restrepo/anomaly/main/TII-seesaw.svg\">\n",
     "</div>\n",
     "\n",
     "Notation:\n",
