--- a/Type_II_Dirac_Seesaw.ipynb
+++ b/Type_II_Dirac_Seesaw.ipynb
@@ -44,6 +44,9 @@
       },
       "source": [
         "# Chiral solutions for Type-II Dirac seesaw with a Active Symmetry\n",
+        "For details see [arXiv:2108.05907](https://arxiv.org/pdf/2108.05907), Sec. 3.2\n",
+        "\n",
+        "## Data Scheme\n",
         "![img](https://raw.githubusercontent.com/restrepo/anomaly/main/schema.svg)"
       ]
     },
