--- a/Effective_Dirac_5_6_IMPORTANT.ipynb
+++ b/Effective_Dirac_5_6_IMPORTANT.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +217,26 @@
     "        zz['n']=zz['solution'].apply(len)\n",
     "        z=z.append(zz).reset_index(drop=True)\n",
     "        z=z[z['n']>0].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3766, 5)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.shape"
    ]
   },
   {
@@ -236,32 +256,12 @@
     }
    ],
    "source": [
-    "z.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3766, 5)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "z[~z['solution'].astype(str).duplicated()].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[3766 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -453,7 +453,7 @@
        "(296884, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -649,7 +649,7 @@
        "[296884 rows x 6 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "id": "x1fCNcB0OC7B"
    },
@@ -749,7 +749,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 18), (0, -9), (1, 18), (1, -9), (-1, 18), (-1, -9)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,1,1,-1,-1,-1,-9,-9,13,18,18,-19,-22]\n",
+    "ms=set([x for x in l if l.count(x)==3]+[0])\n",
+    "νs=set([x for x in l if l.count(x)==2 or l.count(x)==3])\n",
+    "mνs=[(m,ν) for m in ms for ν in νs if m!=ν and l.count(-ν)==0]\n",
+    "mνs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "id": "NYJZBQ52KCEU"
    },
@@ -764,13 +788,12 @@
     "    if not ms:\n",
     "        ms={0}\n",
     "    νs=set([x for x in l if l.count(x)==2 or l.count(x)==3])\n",
-    "    mνs=[(m,ν) for m in ms for ν in νs if m!=ν]\n",
+    "    #                                         exclude vector-like\n",
+    "    mνs=[(m,ν) for m in ms for ν in νs if m!=ν and l.count(-ν)==0]\n",
     "    sold=0\n",
     "    for mν in mνs:\n",
     "        m=mν[0]\n",
     "        ν=mν[1]\n",
-    "        if l.count(-ν)==3:\n",
-    "            continue #vector-like solution\n",
     "        s=(-m-ν)/δ\n",
     "        if float(s)-int(s)==0:\n",
     "            s=int(s)\n",
@@ -812,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "id": "_J31np7_OC7E"
    },
@@ -866,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "id": "NTUyV7fnOC7D"
    },
@@ -877,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "id": "QfZe77ysOC7D"
    },
@@ -888,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "id": "tRChzUUhOC7E"
    },
@@ -902,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "id": "7k4DDhKGOC7F"
    },
@@ -914,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "id": "f8pwW8uFOC7F",
     "outputId": "a5828664-382e-4fc1-f286-c79ace084af5"
@@ -926,7 +949,7 @@
        "[6, 10, 14]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "id": "dVT1eOMqOC7F"
    },
@@ -948,16 +971,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17872, 8)"
+       "(17871, 8)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "id": "m8sfzUQdOC7D",
     "outputId": "f9af1639-8796-48bb-ee6f-2603d1ea61a4"
@@ -980,7 +1003,7 @@
        "(1006, 8)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "id": "hOmeIruGOC7G"
    },
@@ -1019,7 +1042,7 @@
        "(296884, 6)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "id": "NTUyV7fnOC7D"
    },
@@ -1041,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "id": "QfZe77ysOC7D"
    },
@@ -1052,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "id": "dVT1eOMqOC7F"
    },
@@ -1063,16 +1086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7095, 8)"
+       "(7092, 8)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1115,7 @@
        "(72, 8)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
